Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,7 @@
 
 \usepackage{styles/phdbibliobyphd}
 %\addbibresource{main.bib}
-\addbibresource{zotero2.bib}
+\addbibresource{sources_corrected.bib}
 
 \graphicspath{{imgs/}{./}}
 \newcommand\home{./}  % for path adjustments 
@@ -108,7 +108,7 @@
 \input{tex/prequote}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\setlength{\textheight}{23.5cm}
+\setlength{\textheight}{23cm}
 
 \chapter*{Zusammenfassung}
 \addcontentsline{toc}{chapter}{Zusammenfassung}
@@ -118,13 +118,15 @@
 \addcontentsline{toc}{chapter}{Abstract}
     \input{tex/abstract}
 
-\setlength{\textheight}{23cm}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter*{Preface}
 \addcontentsline{toc}{chapter}{Preface}
     \input{tex/preface}
-    
+
+\setlength{\textheight}{23cm}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % TOC / LOF / LOT
 \begingroup
