--- a/tex/preface.tex
+++ b/tex/preface.tex
@@ -2,7 +2,6 @@
 I begin this preface by providing readers with insights about the background of this Master's thesis.
 It is important to understand this thesis as a first step towards a broader endeavour - as preparatory work for a potential dissertation.
 Hence, this thesis should not be seen as self-contained work but rather as a (hopefully exciting) conceptual foundation that will be further developed and refined in the upcoming years.
-
 Many aspects of the proposed framework still require clarification or validation through experimental evidence. I kindly ask you, the reader of this thesis, to understand if certain concepts have not yet been fully explored. I hope you can see the value of these ideas and that they will arouse your curiosity.
 
 Upon successful assessment of this thesis and achieving a satisfactory grade, I am entitled to use the title ``Master of Science''.
@@ -23,7 +22,7 @@ In fact, I had even written an entire thesis about these models, which, with som
 However, as these concepts did not entirely convince me as a foundation for a dissertation, I decided to discard my work and pursue a new approach only five months before the submission deadline.
 Consequently, this thesis contains only a fraction of the conducted experiments but builds on the experience gained from earlier failed attempts.
 Nevertheless, I am convinced that this decision was the right one and that the quality and consistency of a thesis should outweigh the quantity.
-I hope you, dear reader, agree with this perspective and understand the constraints that led to incomplete experimentation.
+I hope you, dear reader, agree with this perspective and understand these constraints that led to incomplete experimentation.
 
 Throughout my Master's studies and my work at the CAI, I  have had the privilege to be supported and mentored by Prof. Dr. Thilo Stadelmann, Head of the CAI.
 He emphasises the idea that (also in accordance with his \href{https://stdm.github.io/Great-methodology-delivers-great-theses/}{blog-post}) ``Great methodology delivers great theses''.
@@ -41,9 +40,9 @@ He always encourages creative ideas, thinking outside the box, and striving for 
 Thank you for your support, help, and guidance; I have grown personally and professionally.
 Further thanks go to Dr. Jan Deriu. 
 He has always helped to translate abstract ideas into concrete algorithms and to get them running.
-It's impressive how your understanding of deep learning can make complex problems look so simple.
+It's impressive how your understanding of deep learning, algorithms, and math can make complex problems look so simple.
 To Prof. Dr. Christoph von der Malsburg for his seemingly endless patience in introducing me to neuroscience.
-You have inspired me regularly with ideas and opened up a new way of thinking about deep learning (this was also the inspiration for Geoffrey Hinton's quote at the beginning of this thesis, although I wouldn't presume to say that this thesis will change the future).
+You have inspired me regularly with ideas and opened up a new way of thinking about biological and artificial learning (this was also the inspiration for Geoffrey E. Hinton's quote at the beginning of this thesis, although I wouldn't presume to say that I will change the future).
 Even though we couldn't implement all of your ideas in this thesis, I learned a lot in our discussions and hope that I will be able to tackle more of your thoughts in the future.
 
 The most profound thanks, however, goes to my family, who made this journey possible for me:
