--- a/tex/probabilistic_framework.tex
+++ b/tex/probabilistic_framework.tex
@@ -83,7 +83,7 @@ The proposed framework is expected to have various advantages over the typical d
 
 \paragraph{Robustness.} A neural network is usually represented with a vector which is sequentially processed by mathematical functions (e.g. with neural layers). Artificial networks, in particular, are not robust to noise and are susceptible to adversarial attacks \sidecite{akhtar_threat_2018}. A binary vector, on the other hand, has different mathematical properties and is more robust against noise and adversarial attacks, especially if they are sparse and distributed\sidenote{Only a small portion of the bits are ``on'', and representations differ by multiple binary bits.} \sidecite{ahmad_properties_2015}.
 Subsampled or noisy vectors are still semantically similar and are close to the original vectors when compared, for example, by counting the overlap of bits between two vectors.
-Furthermore, the projection fibres map neurons from \emph{S1} to neurons in \emph{S2}. Consistency is built at every synapse in the network, meaning each cell and fibre supports the mapping. I speculate that having consistency at every point is more robust than having consistency at a single point, i.e. the output layer, as done by deep networks.
+Furthermore, the projection fibres map neurons from \emph{S1} to neurons in \emph{S2}. Consistency is built at every synapse in the network, meaning each cell and fibre supports the mapping. Building consistency at every point is more robust than having consistency at a single point \sidecite{wagner_robustness_2013}, i.e. the output layer, as done by deep networks.
 
 \paragraph{Increase Certainty Iteratively.} A neural network usually processes input once by feeding it from layer to layer. Thereby, uncertainty is not modelled, and typically the strongest activation signal is used as prediction, independent of how strong it is compared to alternative prediction.
 The proposed framework can refine its predictions until it reaches a consensus about its final output: The activated prototypes in \emph{S2} can be interpreted as hypotheses, which are refined until consistency, i.e. an attractor state, is reached. This happens relatively fast if the fragments in \emph{S1} can be unambiguously mapped to one of the prototypes and requires more iteration between \emph{S1} and \emph{S2} if it is unclear to which prototype the local features belong to or if the input is ambiguous. Thus, the processing duration can be automatically adjusted to the input data.
