--- a/tex/related_work.tex
+++ b/tex/related_work.tex
@@ -7,26 +7,27 @@ This theory can be implemented by combining projection fibres with lateral conne
 Arguably, the only existing systems that, in non-experts' eyes, behave intelligently\sidenote{Which does not mean that such systems exhibit actual intelligence.} are foundation models such as large language models (LLMs) \sidecite{brown_language_2020, touvron_llama_2023}, and their fine-tuned versions \sidecite{ouyang_training_2022}. However, like other deep learning models, also foundation models suffer from the typical drawbacks of statistical learning (c.f. \secref{limitationsDL}). Therefore, a lot of research has been conducted to reduce these well-known problems: For example, current research aims to reduce hallucinations \sidecite{feldman_trapping_2023, manakul_selfcheckgpt_2023}, to implement an ongoing learning framework \cite{sahoo_online_2018, hoi_online_2021}, to transfer knowledge between tasks and data domains \cite{zhuang_comprehensive_2021, sager_unsupervised_2022}, or to learn what should be learned \cite{thrun_introduction_1998, hospedales_meta-learning_2022}. However, the underlying framework remains identical: Data is statistically mapped to manually or automatically generated labels, making it difficult to solve problems such as lack of robustness,  out-of-distribution generalisation, data efficiency, causal understanding or common sense reasoning (c.f. \secref{limitationsDL}). In the following, alternative approaches to training deep networks are presented that attempt to alleviate these problems with new principles that do not rely solely on label prediction or data reconstruction. 
 
 \paragraph{1000 Brains.} Jeff Hawking and his research group use the brain as the single source of inspiration and build, following their interpretation, a biologically highly plausible system that implements the brain's learning algorithm \sidecite{hawkins_framework_2019}. The learning algorithm is an adapted version of unsupervised Hebbian learning (c.f. \secref{hebbian}). Their theory is based on Vernon Mountcastle's proposal that the neocortex comprises many cortical columns, all having a similar architecture and performing similar functions \sidecite{mountcastle_organizing_1978, mountcastle_columnar_1997}. Thus, they argue that the brain does not comprise a single learning model like current deep learning systems but many similar but independent models for each object \cite{lewis_locations_2019}. Each model uses different inputs from different sensory system parts. These models make predictions based on the input they receive and vote to reach a consensus on the sensory observations.
-This theory is also known as the 1000 brains theory, as many models work in parallel. The principle of many parallel models is closely related to ensemble approaches in deep learning \sidecite{yang_survey_2023}, with the constraint, similar to random forest \sidecite{ho_random_1995}, that only a portion of the data is available to each model. Current results are difficult to interpret as the proposed model has been trained and tested on the same dataset. In its current form, the model can recognise several hundred objects and is robust to noise. However, the number of input signals severely limits the network's capacity, and the model cannot yet scale to recognise more objects. 
+This theory is also known as the 1000 brains theory, as many models work in parallel. The principle of many parallel models is closely related to ensemble approaches in deep learning \sidecite{yang_survey_2023}, with the constraint, similar to random forest \sidecite{ho_random_1995}, that only a portion of the data is available to each model. Current results are difficult to interpret as the proposed model has been trained and tested on the same dataset. In its current form, the model can recognise several hundred objects and is robust to noise. However, the number of available input signals severely limits the network's capacity, and the model cannot yet scale to recognise more objects.
+To increase the capacity, one cannot add hidden units but requires additional input signals.
 
 Strictly enforcing biological plausibility limits performance significantly, as the biologically inspired algorithm cannot fully exploit the mathematical capabilities of computational hardware. Intuitively, however, several proposed principles appear promising: \emph{Sparse coding} encourages compact and efficient representation of complex data \sidecite{ferrier_toward_2014}, \emph{self-organisation} of a large number of parallel models increases robustness \cite{yang_survey_2023}, and \emph{predicting future cell activation} allows learning in an unsupervised manner and does not restrict the model to specific predefined tasks.
 
-\paragraph{Recursive Cortical Network.} A second type of network that has evolved from the 1000 brains theory is called the recursive cortical network (RCN) \sidecite{george_generative_2017}\sidenote{The driving force behind it, Dileep George, worked in Jeff Hawkings' group and was instrumental in developing the fundamentals of the 1000 brains theory.}. It is based on the insight that human vision processes shape and appearance differently and that a familiar object with an unexpected colour can still be easily recognised.
-The RCN uses separate mechanisms to process contours and appearances and uses lateral connections for contour consistency.
-When the features cannot explain an image at a certain level $n$, the active features from the level below $n-1$ are combined to create a new feature at level $n$. Afterwards, features are pruned using a cost function considering reconstruction and compression errors.
+\paragraph{Recursive Cortical Network.} A second type of network that has evolved from the 1000 brains theory is called the recursive cortical network (RCN) \sidecite{george_generative_2017}\sidenote{The driving force behind it, Dileep George, worked in Jeff Hawkings' group and was instrumental in developing the fundamentals of the 1000 brains theory.}. It is based on the insight that a human's vision system processes shape and appearance differently and that a familiar object with an unexpected colour can still be easily recognised.
+The RCN uses separate mechanisms to process contours and appearances and uses lateral connections for internal consistency.
+When the features cannot explain an image at a certain level $l$, the active features from the level below $l-1$ are combined to create a new feature at level $l$. Afterwards, features are pruned using a cost function considering reconstruction and compression errors.
 A significant advantage of RCN is that it can learn from a few examples and has one-shot and few-shot learning capabilities.
 However, in its current form, RCNs cannot be applied to natural images: The creation of contour hierarchies works only if the object is clearly separated from its background. Therefore, the network, in its current form, is limited to MNIST \sidecite{lecun_gradient-based_1998} and text-based CAPTCHAs.
 
 Similar to the 1000 brains theory, this model has drawbacks that prevent its practical application but introduces many promising concepts: The \emph{separation of shape and appearance} seems promising, as this limits the feature space, and these concepts can be learned independently. This allows the model to transfer knowledge better: a fist-sized ball can be an apple, an orange or a lemon, depending on its appearance. However, the shape of these fruits only needs to be learned once. Furthermore, in the case of multiple classes, the network does not make a single prediction but creates hypotheses that are evaluated by an outer loop. Thus, it loops between \emph{generating} and \emph{evaluating} hypotheses.
 
-\paragraph{Capsule Networks.} Neuronal capsule networks (CapsNet) \sidecite{sabour_dynamic_2017} mimic biological neural organisation and explicitly model hierarchical relationships. These networks group neurons into ``capsules''; each capsule represents a property such as position, size, orientation, deformation, texture, colour or movement. The results of several of these capsules form more stable representations for higher-level capsules. \emph{Dynamic routing} matches bottom-up activations and top-down concepts ``generated'' by the available evidence over multiple iterations. Thus, dynamic routing is used to learn ``viewpoint invariant'' knowledge that generalises to novel viewpoints.
+\paragraph{Capsule Networks.} Neuronal capsule networks (CapsNet) \sidecite{sabour_dynamic_2017} mimic biological neural organisation and explicitly model hierarchical relationships. These networks group neurons into ``capsules''; each capsule represents a property such as position, size, orientation, deformation, texture, colour or movement. The results of several of these capsules form more stable representations for higher-level capsules. \emph{Dynamic routing} matches bottom-up activations and top-down concepts generated based on available evidence over multiple iterations. Thus, dynamic routing is used to learn viewpoint invariant knowledge that generalises to novel viewpoints.
 Furthermore, it can deal with highly overlapping objects and explain that one object is in front of another. However, CapsNets are still an active area of research and are not yet adopted in real-world scenarios. In particular, dynamic routing makes the algorithm slow, and so far, this approach has only worked on small datasets such as MNIST \sidecite{lecun_gradient-based_1998} or CIFAR-10 \sidecite{krizhevsky_learning_2009}.
 
-Some concepts of CapsNets are closely related to those of the 1000 brains theory and RCNs. However, CapsNets have their origins in computer science and are oriented towards deep learning principles. In contrast, the other frameworks have originated in neuroscience and focus on biological plausibility. CapsNets divide the features into capsules which is helpful for good generalisation. In combination with dynamic routing, capsules allow the model to generalise to new, unseen viewpoints, have a high robustness to affine transformations, and can segment overlapping images. However, a severe problem is the accumulation of spatial information, which prevents the model from scaling to larger datasets. This could be due to the fact that the model processes independent images sequentially. This problem might be alleviated if the model is adapted to either process sequentially related images or videos to obtain better spatial information.
+Some concepts of CapsNets are closely related to those of the 1000 brains theory and RCNs. However, CapsNets have their origins in computer science and are oriented towards deep learning principles. In contrast, the other frameworks have originated in neuroscience and focus on biological plausibility. CapsNets divide the features into capsules which is helpful for good generalisation. In combination with dynamic routing, capsules allow the model to generalise to new, unseen viewpoints, have a high robustness to affine transformations, and can segment overlapping images. However, a severe problem is the accumulation of spatial information, which prevents the model from scaling to larger datasets.
 
-\paragraph{Parsimony and Self-Consistency.} \sideciteay{ma_principles_2022} suggest that appropriate data structuring can lead to the emergence of intelligence, especially if the data is structured according to the principles of parsimony and self-consistency. The two principles describe \emph{what} and \emph{how} should be learned. Parsimony implies that an intelligent learning system should recognise low-dimensional structures in observed high-dimensional data and organise them in the most compact and structured way\sidenote{The goal is not to achieve the best possible compression but to obtain compact and structured representations in a computationally efficient way.}. The second principle of self-consistency states that an intelligent learning system minimises the \emph{internal} discrepancy between observed and regenerated observations. Such internal representations can be learned through self-criticism \sidecite{rennie_self-critical_2017}, where the internal representations are consistent and satisfy the principle of parsimony. The described framework is very promising as it incorporates biological concepts into a framework that unifies and clarifies many practices and empirical findings of deep learning.
+\paragraph{Parsimony and Self-Consistency.} \sideciteay{ma_principles_2022} suggest that appropriate data structuring can lead to the emergence of intelligence, especially if the data is structured according to the principles of parsimony and self-consistency. The two principles describe \emph{what} and \emph{how} should be learned. Parsimony implies that an intelligent learning system should recognise low-dimensional structures in observed high-dimensional data and organise them in the most compact and structured way\sidenote{The goal is not to achieve the best possible compression but to obtain compact and structured representations in a computationally efficient way.}. The second principle of self-consistency states that an intelligent learning system minimises the \emph{internal} discrepancy between observed and regenerated observations. Such internal representations can be learned through self-criticism \sidecite{rennie_self-critical_2017}, where the internal representations are consistent and satisfy the principle of parsimony. The described framework is very promising as it incorporates biological concepts into a framework that unifies and clarifies many practical and empirical findings of deep learning.
 Unfortunately, the authors do not present any metrics, so estimating the framework's performance is difficult.
-This framework's challenge is improving the parsimony principle's modelling, i.e., improving the constraints responsible for forming the latent space and scaling it to larger datasets.
+This framework's challenge is improving the implementation of the parsimony principle, i.e., improving the constraints responsible for forming the latent space and scaling it to larger datasets.
 
 \paragraph{Actionable Representations.} Another frequently used principle inspired by biological learning is the combination of representations with actions \sidecite{knoblich_social_2006, zhou_does_2019}. For example, it is known from animal research that both eye movements and behavioural states influence the reactions of neurons in the visual cortex \cite{keller_sensorimotor_2012}.
 Thus, animals integrate their actions (i.e., movements) with incoming sensory signals.
@@ -35,7 +36,7 @@ Allowing an agent to interact with the world to understand it better and create 
 \sideciteay{piaget_part_1964} argues that perceiving an object is more about understanding how it changes and behaves than creating a mental copy of the object.
 The combination of perception and action for autonomous machine intelligence is also postulated by \sideciteay{lecun_path_2022}. He proposes creating a world model whose state can be predicted based on planned actions. He emphasises the importance of self-supervised learning in combination with energy functions.
 
-These works raise the question of how rich representations should be. Actionable representations not only represent the system's input data but also capture their behaviour when undergoing actions applied to them. However, increasing the representation's information content comes with the costs of providing richer input data:
+These publications raise the question of how rich representations should be. Actionable representations not only represent the system's input data but also capture their behaviour when undergoing actions applied to them. However, increasing the representation's information content comes with the costs of providing richer input data:
 \begin{itemize}
     \item Learning visual representations of an object requires images only.
     \item Learning an object's appearance from different viewpoints requires sequences of images of the same object.
@@ -45,23 +46,24 @@ These works raise the question of how rich representations should be. Actionable
 \paragraph{Active Inference.} \citeay{lecun_path_2022} describes that energy functions are well suited to make predictions of the world state based on actions because they can nicely shape the latent space due to their regulating properties.
 In the context of active inference \sidecite{friston_active_2016, parr_active_2022}, perception presents itself as a process of minimising the free energy of variation with respect to beliefs about hidden variables. This process enables planning and inference by modelling generative processes $p(s,o)$. For example, if it rained at night ($p(s)$), one can infer that the grass is wet ($p(o)$). The model tries to model the chances of different hidden situations $p(s|o)$ based on prior beliefs ($p(s)$) and the likelihood of what it already observed ($p(o|s)$). 
 Thus, active inference minimises the variational free energy by using past experiences to learn how the world works. This helps to predict what might happen in the future by minimising the probability of surprising or unexpected situations.
-This principle is also actively researched by other well-known research groups. For example, Bengio's research group works on GFlowNets (Generative Flow Networks) \sidecite{bengio_flow_2021, bengio_gflownet_2022}, making it possible to disentangle the explanatory causal factors and the mechanisms that connect them. This allows for a more rational approach to generalisations well outside of distribution.
+This principle is also actively researched by other well-known research groups. For example, Bengio's research group works on GFlowNets (Generative Flow Networks) \sidecite{bengio_flow_2021, bengio_gflownet_2022}, making it possible to disentangle the explanatory causal factors and the mechanisms that connect them.
 Furthermore, energy-based models can generate new samples that resemble the training data by sampling from the energy function \sidecite{du_implicit_2020}. This allows for predicting future states and learning concepts such as viewpoint transformations in a self-supervised manner.
 
 \paragraph{Conculsion.} There exist various alternative learning approaches with interesting principles. Many of these principles are adopted in this thesis; Similar to the 1000 brains theory, local self-organisation is used to build consistency between small models, i.e. between cells representing features.
-Also, sparse coding is used in the thesis as it shows promise in enhancing interpretability and robustness \sidecite{ahmad_properties_2015}. The iterative process of generating and evaluating hypotheses, as seen in RCNs, is considered essential to prevent early commitment \sidecite{marr_vision_2010}. In the proposed framework, such a loop is implemented between cells of the same layer: A cell can only remain active when consistent with the global pattern (evaluation loop) while simultaneously defining the global pattern (generation loop). Lastly, the proposed framework leverages an energy function to implement a memory component. 
+Also, sparse coding is used in the thesis as it enhances interpretability and robustness \sidecite{ahmad_properties_2015}. The iterative process of generating and evaluating hypotheses, as seen in RCNs, is considered essential to prevent early commitment \sidecite{marr_vision_2010}. In the proposed framework, such a loop is implemented between cells of the same layer: A cell can only remain active when consistent with the global pattern (evaluation loop) while simultaneously defining the global pattern (generation loop). Lastly, the proposed framework leverages an energy function to implement a memory component. 
 
-Besides these adopted principles, other methodologies seem essential for future work: Especially the organisation of internal representations should be investigated further. Promising appear actionable representations that allow an agent to better understand objects' behaviour under certain transformations and the principles of parsimony and self-consistency to refine the latent representations further.
+Besides these adopted principles, other methodologies seem essential for future work: Especially the organisation of internal representations should be investigated further. Promising approaches to organise representations are actionable representations that allow an agent to better understand objects' behaviour under certain transformations and the principles of parsimony and self-consistency.
 
 \section{Natural Intelligence}\seclbl{natural_intelligence}
-\sideciteay{von_der_malsburg_theory_2022} point out the massive gap between the amount of information needed to describe the brain's structure (1 PB) and the amount needed to generate it (few GB) \sidecite{mcpherson_physical_2001}. Therefore, the brain must be highly structured \cite{gazzaniga_organization_1989, ackerman_discovering_1992, bassett_understanding_2011}
+This section discusses the theory of natural intelligence by \sideciteay{von_der_malsburg_theory_2022}, which serves as foundation of this thesis.
+\citeay{von_der_malsburg_theory_2022} point out the massive gap between the amount of information needed to describe the brain's structure (1 PB) and the amount needed to generate it (few GB) \sidecite{mcpherson_physical_2001}. Therefore, the brain must be highly structured \cite{gazzaniga_organization_1989, ackerman_discovering_1992, bassett_understanding_2011}
 The theory's authors argue that the ``Kolmogorov algorithm \sidecite{kolmogorov_tables_1998} of the brain''\sidenote{The Kolmogorov complexity describes the number of bits required by the shortest algorithm that can generate a given structure.} builds the neuronal structure by selecting from a set of pre-structured patterns. This is in line with other research that argues that the brain is dominated by similar cell patterns \sidecite{mountcastle_organizing_1978, mountcastle_columnar_1997}.
 Self-organisation is the only mechanism that experiments have not yet disproved as the brains Kolmogorov algorithm \cite{willshaw_how_1976, willshaw_marker_1979, singer_brain_1986, kelso_selforganizing_1995, kelso_dynamic_1999}.
 
 This mechanism loops between activity and connectivity, with activity acting back on connectivity through synaptic plasticity until a steady state, called an attractor network, is reached.
 The consistency property of an attractor network implies that a network has many alternative signal pathways between pairs of neurons \sidecite{von_der_malsburg_neural_1987}.
 Thus, the brain develops as an overlay of attractor networks called net fragments \sidecite{von_der_malsburg_concerning_2018}.
-Net fragments consist of small sets of neurons, whereby each neuron can be part of several net fragments.
+Net fragments consist of sets of neurons, whereby each neuron can be part of several net fragments.
 In the case of visual processing, net fragments can be considered filters that detect previously seen patterns in the visual input signal.
 An object is represented by multiple net fragments, where each fragment responds to the surface of that object and has shared neurons and connections with other net fragments representing that object.
 Thus, net fragments render the topological structure of the surfaces that dominate the environment.
@@ -78,23 +80,23 @@ He proposes a new layer called the laterally connected layer (LCL) that forms la
 Such lateral connections are synapses running between cells in the same layer.
 However, the proposed layer has only improved performance on small networks, and its effectiveness on larger networks has yet to be demonstrated.
 Furthermore, lateral connections are only used at the end of the network, thereby not preventing the model from early commitment since features are still processed hierarchically.
+Moreover, Lehmann does not build net fragments and thus ignores some of the aspects of the theory.
 
-In this thesis, lateral connections similar to \citeay{lehmann_leveraging_2022} are used in combination with two processing stages: One stage processes the perceived input using lateral connections with a limited reach\sidenote{The reach defines how many spatially neighbouring cells are connected.} while the second stage represents transformation-invariant object prototypes, allowing for lateral connections with a longer reach.
-Between these two stages, projection fibres map neighbouring neurons in the first stage to neighbouring neurons in the second stage and vice versa.
-
+In this thesis, lateral connections are used to build net fragments.
+The thesis strictly follows the theory of natural intelligence, implementing the proposed principles within a concrete computational framework. It is the first work to analyse the theory of natural intelligence by conducting experiments and making it more concrete.
 
 \subsection{Projection Fibres}\seclbl{projection_fibres}
-The previous section introduces two stages, one containing image-dependent features and one containing object prototypes.
-As it will be outlined in \secref{neuroscience_findings}, these stages are inspired by the human brain: The eyes activate cells in the primary visual cortex \sidecite{tong_primary_2003, grill-spector_human_2004} that represent the visually perceived scene.
-The objects within this scene are mapped to reference frames (object prototypes) that represent the same object but are independent of transformation and position.
-In the human brain, such prototypes are stored in the temporal cortex \sidecite{miyashita_inferior_1993, conway_organization_2018} and projection fibres, a type of axons, map the object in the visual cortex to reference frames in the temporal cortex in a position- and transformation-invariant manner.
+An important principle of the theory of natural intelligence is the rendering of topological structures.
+Meaning that image features extracted by a filter are mapped to a corresponding reference image, whereby neighbouring features in the initial image are mapped to neighbouring regions in the reference image.
+This mapping is inspired by the human brain that maps cell activity in the primary visual cortex \sidecite{tong_primary_2003, grill-spector_human_2004} to transformation- and position-invariant reference objects stored in the 
+temporal cortex \sidecite{miyashita_inferior_1993, conway_organization_2018}.
+The mapping is done with a special type of axon called projection fibre \sidecite{greig_molecular_2013}.
 This chapter presents different implementations of projection fibres, while \secref{neuroscience_findings_projection_fibres} discusses biological aspects in more detail. 
 
-Projection fibres can be interpreted as a graph combining features hierarchically, ignoring local distortions to create transformation-independent object detection.
-From a computational perspective, projection fibres can be implemented as matching labelled subgraphs \cite{bienenstock_neural_1987, lades_distortion_1993, wiskott_face_1996}.
-Therefore, an image is typically interpreted as a graph of image features. The image features serve as graph labels and are linked to neighbouring features. The connections of the graph thus represent the spatial relationships between the features in the image.
-The resulting graph represents the entire image. However, not all pixels usually belong to the same object; therefore, a subgraph represents an object.
-In addition, an idealised version of this object's subgraph can be stored as a prototype.
+Projection fibres map images to reference objects and can be seen as a graph combining features hierarchically, ignoring local distortions to create transformation-independent object detection.
+From a computational perspective, projection fibres can be interpreted as matching labelled subgraphs \cite{bienenstock_neural_1987, lades_distortion_1993, wiskott_face_1996}.
+Therefore, an image is typically described as a graph of image features. The image features serve as graph labels and are linked to neighbouring features. The connections of the graph thus represent the spatial relationships between the features in the image, and the resulting graph represents the entire image. However, not all pixels usually belong to the same object; therefore, an object is represented by a subgraph.
+In addition, an idealised version of this object's subgraph is stored as a prototype.
 By matching the subgraphs of an image and the stored subgraph prototypes, projection fibres can be formulated as a subgraph-matching problem.
 
 \sideciteay{lades_distortion_1993} divide the training into two phases: During a storage phase, sparse graphs labelled with Gabor-type wavelets are formed and stored as model prototypes. In the recognition phase, the Gabor wavelets of the perceived image are matched with the previously stored graph prototypes.
@@ -105,7 +107,7 @@ The matching process from prototypes to feature sub-graphs is implemented by min
 However, their work only showed that this matching procedure works for $3$ rather simple prototypes.
 So far, this approach could not scale to larger datasets or photorealistic images.
 
-\sideciteay{wiskott_face_1996} proposed self-organising projection fibres for face recognition. They do not store all prototypes in distinct graphs. The mapping between the image array and the stored prototype array is based on synaptic plasticity and the constraint of preservation of topography to find matches. The preservation of topography is achieved with lateral connections, which are excitatory over a short range and inhibitory over a long range.
+\sideciteay{wiskott_face_1996} proposed self-organising projection fibres for face recognition. The mapping between the image array and the stored prototype array is based on synaptic plasticity and the constraint of preservation of topography to find matches. The preservation of topography is achieved with lateral connections, which are excitatory over a short range and inhibitory over a long range.
 The connectivity matrix is initialised using the similarities between the features of the connected neurons. Afterwards, the connectivity matrix is adjusted by moving the prototype sub-graph across the image until a good match to the feature graph is found.
 However, one problem with this model is that matching takes a long time and is, therefore, impractical.
 
@@ -129,7 +131,7 @@ The absence of a central control unit allows self-organising systems to adjust t
 Additionally, such systems have built-in redundancy with a high degree of robustness as they consist of many simpler individual units \sidecite{wagner_robustness_2013}.
 These individual units can even fail without the overall system breaking down.
 
-Self-organisation is highly relevant in this thesis: First, the theory of natural intelligence (c.f. \secref{natural_intelligence}) argues the brain's Kolmogorov algorithm is self-organising and a key to natural intelligence. Second, implementing a system that prevents early commitment cannot rely on a central control system that steers the entire process. Instead, local decisions are taken based on the feasibility of overarching patterns through a self-organising approach.
+Self-organisation is highly relevant in this thesis: First, the theory of natural intelligence (c.f. \secref{natural_intelligence}) argues the brain's Kolmogorov algorithm is self-organising and a key to natural intelligence. Second, implementing a system that prevents early commitment cannot rely on a global error correction signal that controls the entire process. Instead, taking local decisions based on the feasibility of overarching patterns requires a self-organising approach.
 
 \paragraph{Growing Patterns.} Cellular automata contain a grid of similar cells\sidenote{An image or features of images can be interpreted as a 2D grid of cells.} with an internal state updated periodically.
 Update rules define the transition from a given state to a subsequent state.
@@ -175,9 +177,9 @@ Thus, the data space is self-organised by local rearrangements.
 However, SOMs have two significant limitations; First, the network structure must be predefined, limiting the mapping accuracy. Second, the map's capacity is predefined through the number of nodes.
 Growing networks overcome these limitations and add nodes or whole layers of nodes into the network structure at the positions of the map where the error is highest \cite{reilly_neural_1982, fritzke_growing_1994, marsland_self-organising_2002}.
 
-Besides ANNs, the structure of spiking neural networks (c.f. Section \secref{spiking_networks}) can also be optimised using self-organisation. 
-SNNs can either be assembled from multiple stackable sub-systems \sidecite{raghavan_self-organization_2020}
-or be grown from a single cell \cite{raghavan_neural_2019} by adding additional cells and connections.
+%Besides ANNs, the structure of spiking neural networks (c.f. \secref{spiking_networks}) can also be optimised using self-organisation. 
+%SNNs can either be assembled from multiple stackable sub-systems \sidecite{raghavan_self-organization_2020}
+%or be grown from a single cell \cite{raghavan_neural_2019} by adding additional cells and connections.
 
 \paragraph{Relevance.} The proposed framework is highly related to the aforementioned self-organising principles: First, net fragments can reconstruct local patterns when occluded, resembling methodologies that can grow patterns. Second, projection fibres implement a mapping from scenes to reference frames, related to approaches that implement classification based on self-organising principles. Finally, the proposed framework relies on a self-organising Hebbian learning algorithm.
 In contrast, the architecture of the network is currently predefined and has not yet adopted a self-organising approach. Nevertheless, it is essential for future research efforts to explore the dynamic incorporation of patterns in reference frames, thereby increasing the relevance of introduced concepts such as self-organising maps (SOMs).
@@ -197,13 +199,12 @@ However, despite these deficits, it is still considered the best error correctio
 Hebbian learning (c.f. \secref{hebbian}), on the other hand, is widely accepted in the fields of neurocomputing, psychology, neurology, and neurobiology \sidecite{widrow_natures_2019}.
 Hebbian learning works well, for example, for topographic mappings \sidecite{kohonen_self-organization_1989, grajski_hebb-type_1990}, implementing neuroplasticity\sidenote{The network's ability to reorganise itself by forming new connections.} \sidecite{montague_spatial_1991}, or recognising non-linear patterns \sidecite{mel_nmda-based_1992}, but also has limitations \cite{anderson_biased_1998}.
 For example, Hebb's learning rule is insufficient as a general rule for time-shifted signals as it requires (almost) synchronous stimuli \sidecite{anderson_biased_1998, rumelhart_learning_1986}.
-In this thesis, Hebbian learning is used.
-Besides Hebbian learning, various other optimisation algorithms exist that are inspired by the human brain. These algorithms are summarised in the following to provide a comprehensive overview of alternative learning principles. Readers who are only interested in the proposed framework may optionally skip this chapter.
+Besides Hebbian learning, various other optimisation algorithms are inspired by the human brain. These algorithms are summarised in the following to provide a comprehensive overview of alternative learning principles. Readers only interested in the proposed framework may skip this chapter.
 
 
 \paragraph{Proxy Objective Functions.} Typical deep learning models are trained by minimising a global objective function \cite{prince_understanding_2023}. \emph{Proxy objective functions} \cite{mostafa_deep_2018, marquez_deep_2018, belilovsky_greedy_2019} are objective functions applied to each layer in the model. For example, the loss function of the first layer (i.e. the proxy objective of the first layer) influences only the trainable parameters of the first layer but not the parameters of the second layer.
 Thus, proxy objective functions allow decoupling layers.
-Instead of a metric, also an auxiliary model that evaluates the goodness of representations can be used as proxy objective functions \cite{duan_kernel_2020, duan_modularizing_2022, wang_revisiting_2021, belilovsky_greedy_2019, mostafa_deep_2018, marquez_deep_2018} or a combination of auxiliary network and metric \sidecite{nokland_training_2019}.
+Instead of a metric, also an auxiliary model that evaluates the quality of representations can be used as proxy objective functions \cite{duan_kernel_2020, duan_modularizing_2022, wang_revisiting_2021, belilovsky_greedy_2019, mostafa_deep_2018, marquez_deep_2018} or a combination of auxiliary network and metric \sidecite{nokland_training_2019}.
 
 A significant issue of models based on proxy objective functions is that they are usually trained layer-wise\sidenote{When layer $k$ is trained, the layers $1, ..., k-1$ are frozen, and the layers $k+1, ..., n$ are not updated.}.
 The resulting computational inefficiency can be reduced with synchronous or asynchronous training.
@@ -224,7 +225,7 @@ The sum of the squared neural activities measures the goodness. Thus, having man
 During inference, the data is fed with each label through the network, and the one with the highest goodness is kept as the prediction.
 
 The same input is fed into the model over multiple timesteps to obtain hierarchical features \sidecite{hinton_how_2021}.
-The trick is to feed the input into the network from one side and the label into the network from the other side. A layer receives as input the activity vector of the previous layer and the activity vector of the subsequent layer at the previous timestep. By enforcing high goodness when the input and label match, information must flow in both directions. Thus, hierarchical features can be learned without a backward pass.
+The trick is to feed the input into the network from one side and the label into the network from the other. A layer receives as input the activity vector of the previous layer and the activity vector of the subsequent layer at the previous timestep. By enforcing high goodness when the input and label match, information must flow in both directions. Thus, hierarchical features can be learned without a backward pass.
 
 The FF algorithm did not yet scale to large datasets. Furthermore, inference is very slow for datasets with many labels, as each sample is compared with all existing labels. Overall, feeding specific information (e.g. images) into one end of the network and general information (e.g. labels) into the other end and effectively merging these inputs to extract hierarchical features seems very promising.
 
