--- a/tex/results.tex
+++ b/tex/results.tex
@@ -157,7 +157,7 @@ However, it is important to note that the four output channels have similar char
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.99\textwidth]{S1_weight_analysis}
-    \caption[Analysis of weight matrix]{An overview of the data processed by the weight matrix of \emph{S1}.}
+    \caption[Analysis of the data processed by the weight matrix \emph{S1}]{An overview of the data processed by the weight matrix of \emph{S1}.}
     \figlbl{S1_weight_analysis}
 \end{figure}
 %
