--- a/tex/title_page.tex
+++ b/tex/title_page.tex
@@ -17,7 +17,7 @@
 \par\noindent\rule{\textwidth}{0.4pt}
 
 \vspace{0.2cm}
-{\par\huge\bfseries Self-Organisation in a Biologically Inspired Novel Learning Framework Based on Bernoulli Neurons\par}
+{\par\huge\bfseries Self-Organisation in a Biologically Inspired Learning Framework Based on Bernoulli Neurons\par}
 \vspace{0.4cm}
 {\par\Large Incorporating Findings from Neuroscience about Natural Intelligence into a Computational Framework\par}
 \vspace{0.2cm}  
